# devrepo

./: .gitignore  .travis.yml  README.md  readme.md  setup.cfg  tox.ini
src/main/devrepo/: __init__.py  config.ini  config.py  register.py  shell.py
src/test/devrepo_test/: config_test.py  register_test.py  shell_test.py
src/verify/user_code/: main_stack.py
tool/: arkon.sh  github_squash.py  readme.md  release_update.py
